--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,5 +15,7 @@
      Skype: johanborges80 <br>
      Telefono: 3195984505 <br>
     </p>
+
+    <a href="Fase2/desing.html">Link Fase 2</a>
 </body>
 </html>
