--- a/Fase4/tema2.html
+++ b/Fase4/tema2.html
@@ -21,11 +21,11 @@
             <li> <a href="index.html">Inicio</a> </li>
             <li><a href="#">temas</a>
                 <ul class="dropdown-1">
-                    <li><a href="tema1.html">Framework Bootstrap</a></li>
                     <li><a href="tema2.html">SEO</a></li>
+                    <li><a href="tema1.html">Framework Bootstrap</a></li>
                 </ul>
             </li>
-            <li><a href="#">Recursos</a>
+            <li><a href="#">Recursos digitales</a>
                 <ul class="dropdown-1">
                     <li> <a href="recurso1.html">Framework Bootstrap</a> </li>
                     <li><a href="recurso2.html">SEO</a></li>
@@ -36,8 +36,8 @@
     </nav>
     <div>
         <section> 
-            <h4> Tema 1</h4>
-            <iframe src="pdf/lectura1.pdf" frameborder="0" height="400" width="600"></iframe>
+            <h4> Tema 2</h4>
+            <iframe src="pdf/lectura2.pdf" frameborder="0" height="400" width="600"></iframe>
             
         </section>
         <aside>Seccion lateral
