--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,12 @@
     <h3>Nombre: Johan Manuel Borges Londiol</h3>
     <p>
      Ingenieria de Sistemas <br>
-     Junio 16 de 2021 <br>
+     Julio 28 de 2021 <br>
      Skype: johanborges80 <br>
-     Telefono: 3195984505xd <br>
+     Telefono: 3195984505<br>
     </p>
 
-    <a href="Fase2/desing.html">Link Fase 2</a>
+    <a href="Fase2/desing.html">Link Fase 2</a><br>
+    <a href="Fase3/index.html">Link Fase 3</a>
 </body>
 </html>
