--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
     </p>
 
     <a href="Fase2/desing.html">Link Fase 2</a><br>
-    <a href="Fase3/index.html">Link Fase 3</a>
+    <a href="Fase3/index.html">Link Fase 3</a><br>
     <a href="Fase4/index.html">Link Fase 4</a>
 </body>
 </html>
